[gd_scene format=3]

[ext_resource type="Script" path="res://scripts/ui/DialogueBox.gd" id="1"]

[node name="DialogueBox" type="Panel"]
script = ExtResource(1)

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]

[node name="SpeakerLabel" type="Label" parent="MarginContainer/VBoxContainer"]
text = "Speaker"

[node name="TextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
fit_content = true

[node name="ContinueIcon" type="TextureRect" parent="."]
